Fix widget strip clipping

--- a/src/app/scss/main.scss
+++ b/src/app/scss/main.scss
@@ -143,7 +143,7 @@ main .scroll-wrap {
 	width: 100%;
 	height: auto;
 	overflow: auto;
-	// padding: 64px 16px;
+	padding: 20px;
 	justify-content: space-around;
 }
 
